// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainMenu /> rendering should render Nieuwe Melding NavLink component when not authenticated 1`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              <FormattedMessage
                defaultMessage="Nieuwe melding"
                description="Top navigation new melding label"
                id="menu.new_melding"
                values={Object {}}
              />
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<MainMenu /> rendering should render Nieuwe Melding and Afhandelen NavLink components when authenticated 1`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              <FormattedMessage
                defaultMessage="Nieuwe melding"
                description="Top navigation new melding label"
                id="menu.new_melding"
                values={Object {}}
              />
            </span>
          </NavLink>
        </li>
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            to="/manage/incidents"
          >
            <span
              className="linklabel"
            >
              <FormattedMessage
                defaultMessage="Afhandelen"
                description="Top navigation afhandelen link label"
                id="menu.afhandelen"
                values={Object {}}
              />
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<MainMenu /> rendering should render Nieuwe Melding and Afhandelen NavLink components when authenticated 2`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              <FormattedMessage
                defaultMessage="Nieuwe melding"
                description="Top navigation new melding label"
                id="menu.new_melding"
                values={Object {}}
              />
            </span>
          </NavLink>
        </li>
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            to="/manage/incidents"
          >
            <span
              className="linklabel"
            >
              <FormattedMessage
                defaultMessage="Afhandelen"
                description="Top navigation afhandelen link label"
                id="menu.afhandelen"
                values={Object {}}
              />
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<MainMenu /> rendering should render Nieuwe Melding and Afhandelen and Beheer standaard teksten NavLink components when authenticated 1`] = `
<div
  className="row main-menu-component no-print"
>
  <div
    className="container type-nav-primair"
  >
    <nav>
      <ul
        className="links horizontal"
      >
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            onClick={[Function]}
            to="/"
          >
            <span
              className="linklabel"
            >
              <FormattedMessage
                defaultMessage="Nieuwe melding"
                description="Top navigation new melding label"
                id="menu.new_melding"
                values={Object {}}
              />
            </span>
          </NavLink>
        </li>
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            to="/manage/incidents"
          >
            <span
              className="linklabel"
            >
              <FormattedMessage
                defaultMessage="Afhandelen"
                description="Top navigation afhandelen link label"
                id="menu.afhandelen"
                values={Object {}}
              />
            </span>
          </NavLink>
        </li>
        <li>
          <NavLink
            activeClassName="active"
            aria-current="page"
            to="/manage/standaard/teksten"
          >
            <span
              className="linklabel"
            >
              <FormattedMessage
                defaultMessage="Beheer standaard teksten"
                description="Top navigation manage default responsenses link label"
                id="menu.manage_standaard_teksten"
                values={Object {}}
              />
            </span>
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
